--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -13,9 +13,12 @@
     {% style "/assets/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" %}
     {% style "/css/screen.css" %}
 
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+
     <script type="text/javascript">
-        var context = "{{servlet-context}}";
-        var csrfToken = "{{csrf-token}}";
+     var context = "{{servlet-context}}";
+     var csrfToken = "{{csrf-token}}";
     </script>
     {% script "/js/app.js" %}
   </body>
