--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
     <script type="text/javascript">
      var context = "{{servlet-context}}";
