--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,5 +1,15 @@
+*:focus {
+	outline: none !important;
+}
+
 textarea:focus, input:focus{
   outline: none;
+}
+
+button, input {
+	-webkit-border-radius: 0 !important;
+	-moz-border-radius: 0 !important;
+	border-radius: 0 !important;
 }
 
 .no-select {
@@ -71,7 +81,6 @@ body{
 
 .header {
   height: 95px;
-  background-color: white;
   display: flex;
   flex-direction: column;
   background-color: rgba(0,0,0,0.05);
@@ -170,14 +179,13 @@ body{
 
 .search-ui-container {
   position: absolute;
-  background-color: blue;
   left: 0px; right: 0px; top: 340px;
-  height: 60px;
+  height: 66px;
 }
 
 .search-results-container {
   position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 400px;
+  left: 0px; right: 0px; bottom: 0px; top: 406px;
   overflow-y: auto;
 }
 
@@ -259,16 +267,17 @@ body{
 	color: white;
 }
 
-
-.filters-container-top {
-  display: flex;
+.filters-container {
+  position: relative; height: 100%;
 }
 
-.filter-input{
-
+.filter-input {
+  margin: 10px;
+	font-size: 18px;
+	height: 46px;
 }
 
-.filter-input-focus{
+.filter-input:focus {
 	border-color: #66afe9 !important;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
@@ -276,8 +285,8 @@ body{
 
 .filter-input-icons {
   position: absolute;
-  right: 10px;
-  top: 9px;
+  right: 20px;
+  top: 8px;
   list-style-type: none;
 }
 
@@ -299,5 +308,20 @@ body{
 .play-icon{
   padding-left: 3px;
 }
-.pause-icon{
+.pause-icon{}
+
+.filter-input md-autocomplete-wrap {
+	border: 1px solid #ccc;
+	height: 46px;
+	font-size: 22px;
+}
+
+.filter-input md-autocomplete-wrap.md-whiteframe-z1 {
+	-webkit-box-shadow:none;
+	box-shadow:none;
+}
+
+.filter-input md-autocomplete-wrap.md-menu-showing {
+	-webkit-box-shadow:none;
+	box-shadow:none;
 }
