--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -184,6 +184,20 @@ body{
   height: 340px;
 }
 
+.video-player-box {
+  background-color: black;
+  height: 340px;
+  text-align: center;
+  overflow: hidden;
+}
+
+.video-player {
+  height: 320px;
+  text-align: center;
+  background-color: gray;
+  margin: 10px auto;
+}
+
 .search-ui-container {
   position: absolute;
   left: 0px; right: 0px; top: 340px;
