icons for navigation

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -98,7 +98,7 @@ body{
 .header-button {
   padding: 8px 16px;
   color: gray;
-  text-decoration: underline;
+  text-decoration: none;
   font-size: 10px;
 }
 
