--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -307,6 +307,12 @@ body{
 	box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6) !important;
 }
 
+.search-result-count{
+	margin-right: 6px;
+	font-weight: bold;
+	opacity: .3;
+}
+
 .filter-input-icons {
   position: absolute;
   right: 20px;
