--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -1,3 +1,10 @@
+.IIV::-webkit-media-controls-play-button,
+.IIV::-webkit-media-controls-start-playback-button {
+  opacity: 0;
+  pointer-events: none;
+  width: 5px;
+}
+
 *:focus {
 	outline: none !important;
 }
