--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -240,8 +240,20 @@ body{
 
 .suggestions-container {
   position: absolute;
-  left: 0px; right: 0px; bottom: 0px; top: 406px;
+  left: 10px; right: 10px; bottom: 0px; top: 400px;
   overflow-y: auto;
+  padding: 0px 20px;
+  border: 1px #ccc solid;
+}
+
+.suggestion {
+  display: flex;
+	color: #999;
+	font-size: 16px;
+	cursor: pointer;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-bottom: 1px rgba(0,0,0,0.1) solid;
 }
 
 .search-results-results .results .one-result{}
