--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -83,7 +83,7 @@ body{
 }
 
 .layout-main {
-  width: 590px;
+  width: 600px;
   display: flex;
   flex-direction: column;
   box-shadow: 0 0 25px 0 rgba(0,0,0,0.1);
@@ -242,7 +242,7 @@ body{
   position: absolute;
   left: 10px; right: 10px; bottom: 0px; top: 400px;
   overflow-y: auto;
-  padding: 0px 20px;
+  padding: 0px 15px;
   border: 1px #ccc solid;
 }
 
@@ -254,6 +254,10 @@ body{
   padding-bottom: 10px;
   padding-top: 10px;
   border-bottom: 1px rgba(0,0,0,0.1) solid;
+}
+
+.suggestion.higlited {
+  color: black;
 }
 
 .search-results-results .results .one-result{}
