--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to playphraseme</title>
+	  <meta name="viewport" content="width=600,user-scalable=no">
+    <title>PlayPhrase.me: Endless stream of movie clips of specific phrases (<%- phrase ? phrase.text : "" %>)</title>
   </head>
   <body>
     <div id="app"> </div>
