--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -431,3 +431,47 @@ word, word:active, word:focus{
 .play-icon2{
   padding-left: 10px;
 }
+
+@media only screen and (max-width: 800px) and (orientation : portrait){
+  .search-results-container {
+    left: 0px; right: 0px; bottom: 0px; top: 440px !important;
+  }
+
+  .s-word{
+	  font-size: 33px !important;
+  }
+
+  .phrase-number{
+    font-size: 22px !important;
+  }
+
+  .filter-input {
+	  font-size: 38px !important;
+	  height: 79px !important;
+    padding: 20px !important;
+  }
+
+  .search-result-count{
+	  margin-right: 6px !important;
+	  font-weight: bold !important;
+	  opacity: .3;
+  }
+
+  .filter-input-icons {
+    position: absolute;
+    right: 30px !important;
+    top: 30px !important;
+    font-size: 22px !important;
+  }
+
+  .suggestions-container {
+    left: 10px; right: 10px; bottom: 0px; top: 440px !important;
+  }
+
+  .suggestion {
+	  font-size: 33px !important;
+  }
+}
+
+
+
