--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -17,6 +17,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
+
     <script src="/js/iphone-inline-video.min.js"></script>
 
     <script type="text/javascript">
