--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -6,6 +6,8 @@
     <title>PlayPhrase.me: Endless stream of movie clips of specific phrases (<%- phrase ? phrase.text : "" %>)</title>
   </head>
   <body>
+
+
     <div id="app"> </div>
 
     <!-- scripts and styles -->
@@ -27,5 +29,35 @@
      var csrfToken = "{{csrf-token}}";
     </script>
     {% script "/js/app.js" %}
+
+    <script>
+	   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	   ga('create', 'UA-56061701-1', 'auto');
+
+	  </script>
+
+    <script>
+     window.fbAsyncInit = function() {
+       FB.init({
+         appId      : '{{facebook-app-id}}',
+         cookie     : true,
+         xfbml      : true,
+         version    : '2.7'
+       });
+       FB.AppEvents.logPageView();   
+     };
+
+     (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
+    </script>
   </body>
 </html>
