--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -17,7 +17,6 @@ textarea:focus, input:focus{
   -webkit-filter: invert(100%);
   filter: invert(100%);
 	transition: filter 0.4s ease-in-out;
-  background-color: rgba(255,255,255,0.9) !important;
 }
 
 button, input {
@@ -98,6 +97,10 @@ body{
   flex-direction: column;
   background-color: rgba(0,0,0,0.05);
   border-bottom: 4px solid rgba(0,0,0,0.2);
+}
+
+.header.invert {
+  background-color: rgba(255,255,255,0.9) !important;
 }
 
 .header .top {
