--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -485,7 +485,7 @@ word, word:active, word:focus{
   font-weight: 300;
 }
 
-.page-title {
+h1, .page-title {
 	font-size: 24px;
   margin: 35px 0;
 	color: rgba(0,0,0,0.8);
@@ -555,6 +555,41 @@ word, word:active, word:focus{
   text-decoration: underline;
 }
 
+.fa-button {
+  margin: 30px;
+  padding: 20px 40px 20px 20px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  background: #3B5998;
+  color: white;
+  display: flex;
+  justify-content: center;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.fa-button .fa {
+  padding: 0 20px;
+  font-size: 50px !important;
+  text-align: center;
+  text-decoration: none;
+  background: #3B5998;
+}
+
+.fa-button span {
+  padding-top: 4px;
+}
+
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa:hover {
+  opacity: 0.7;
+}
 @media only screen and (max-device-width: 800px) and (orientation : portrait){
   .header-button {
     padding: 8px 12px;
