--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -42,5 +42,16 @@
 
 	  </script>
 
+    <script async src="https://static.addtoany.com/menu/page.js"></script>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) return;
+       js = d.createElement(s); js.id = id;
+       js.src = 'https://connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v2.12&appId=1362865573739831&autoLogAppEvents=1';
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));</script>
+
   </body>
 </html>
